made changes so that tabs will open in new tabs

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
                 <div id="heading">ANIME</div>
             </div>
             <div id="right-header">
-                <a href="https://www.crunchyroll.com/series/GRDV0019R/jujutsu-kaisen" class="link">jjk</a>
-                <a href="https://www.crunchyroll.com/series/GYP8DP1MY/jojos-bizarre-adventure" class="link">jojo</a>
-                <a href="https://www.crunchyroll.com/series/G8DHV7W21/dragon-ball" class="link">dragon ball</a>
-                <a href="https://www.crunchyroll.com/series/GYQ4MW246/naruto-shippuden" class="link">naruto</a>
+                <a href="https://www.crunchyroll.com/series/GRDV0019R/jujutsu-kaisen" class="link" target="_blank">jjk</a>
+                <a href="https://www.crunchyroll.com/series/GYP8DP1MY/jojos-bizarre-adventure" class="link" target="_blank">jojo</a>
+                <a href="https://www.crunchyroll.com/series/G8DHV7W21/dragon-ball" class="link" target="_blank">dragon ball</a>
+                <a href="https://www.crunchyroll.com/series/GYQ4MW246/naruto-shippuden" class="link" target="_blank">naruto</a>
             </div>
         </div>
 
@@ -28,7 +28,7 @@
                     Anime is hand-drawn and computer-generated animation originating from Japan. Outside Japan, anime refers specifically to animation produced in Japan. However, in Japan anime describes all animated works, regardless of style or origin. 
                     <br>
                 </p>
-                <a href="https://en.wikipedia.org/wiki/Anime"><button >anime wiki</button></a>
+                <a href="https://en.wikipedia.org/wiki/Anime" target="_blank"><button >anime wiki</button></a>
             </div>
             <img src="./images/intro-wallpaper.jpg" id="intro-image">
         </div>
@@ -69,7 +69,7 @@
                     <strong>it's time !!!</strong><br>
                     sign up to cruncy roll right now to watch all the latest and popular anime by clicking that button right there
                 </p>
-                <a href="https://www.crunchyroll.com/"><button>sign up</button></a>
+                <a href="https://www.crunchyroll.com/" target="_blank"><button>sign up</button></a>
             </div>
         </div>
 
